--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,9 +1,10 @@
 name: WakaTime status update
 
 on:
+  push:
+    branches: [main]
   schedule:
-    # Runs at 12 am  '0 0 * * *'  UTC
-    - cron: "1 0 * * *"
+    - cron: "0 1 * * *"
 
 jobs:
   update-readme:
